Fixed grid on gallery page and fiximg link on bio page

--- a/grid.css
+++ b/grid.css
@@ -9,7 +9,7 @@
     display: grid;
     column-gap: 30px;
     row-gap: 30px;
-    grid-template-columns: 0.5fr 11 0.5fr;
+    grid-template-columns: 0.5fr 11fr 0.5fr;
 }
 
 body>section>div>ul{
@@ -30,3 +30,13 @@ body>section>div>ul{
     object-fit: cover;
     object-position: 0% 0%;
   }
+
+/* @media only screen and (max-width: 800px):
+    .bio-grid{
+        display: grid;
+        column-gap: 10px;
+        row-gap: 30px;
+        grid-template-columns: 0.5fr 11fr 0.5fr;
+    }
+    
+} */
