improved responsiveness of bio page and fixed img link, added grid to gallery

--- a/grid.css
+++ b/grid.css
@@ -1,4 +1,5 @@
 .bio-grid{
+
     display: grid;
     column-gap: 30px;
     row-gap: 30px;
@@ -22,21 +23,29 @@ body>section>div>ul{
 .card>img{
     height:350px;
     object-fit: cover;
-    object-position: 0% 0%;
+    object-position: 50% 0%;
 }
 
 .carousel-item > img {
     height: 400px;
     object-fit: cover;
-    object-position: 0% 0%;
+    object-position: 80% 80%;
   }
 
-/* @media only screen and (max-width: 800px):
+@media only screen and (max-width: 600px){
     .bio-grid{
-        display: grid;
         column-gap: 10px;
-        row-gap: 30px;
-        grid-template-columns: 0.5fr 11fr 0.5fr;
+        row-gap: 10px;
     }
-    
-} */
+    .bio-grid>.card>img{
+        height:100px;
+        object-fit: cover;
+        object-position: 50% 0%;
+    }
+    .bio-grid li{
+        font-size: smaller;
+    }
+    .bio-grid p{
+        font-size: smaller;
+    }
+}
